@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix apr_file_gets() and apr_file_read() to catch write failures
+     when flushing pending writes for a buffered file.  [Joe Orton]
+
   *) Fix apr_file_write() infinite loop on write failure for buffered
      files.  [Erik Huelsmann <ehuels gmail.com>]
 
